tests/error/unused_unpack.gw
#! [contains] unused Tuple unpack
Unpack(a,b);
